[metadata]
name = DCON_Visualization
version = 1.0.0
author = Daniel Tschernutter
author_email = daniel.michael.tschernutter@alumni.ethz.ch
description = A package that allows to visualize benchmarking results of the DCON algorithm.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/DanielTschernutter/DCON_Visualization
license = MIT
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python

[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    DCON>=1.0.0
    streamlit>=1.19.0
    tensorflow>=2.10.0
    numpy>=1.23.5
    keras-tuner>=1.3.0
    requests>=2.28.2
    pandas>=1.5.3
    plotly>=5.13.1
    scikit-learn>=1.2.0
    Pillow>=9.3.0

[options.packages.find]
exclude=
    DCON_Visualization.tests
    DCON_Visualization.data

[options.entry_points]
console_scripts = 
    run_DCON_Visualization = DCON_Visualization.DCON_Visualization_entry_point:main